# talvos

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  Dockerfile.emscripten  README.md
hack/: build-wasm.sh  debug.sh
include/talvos/: Buffer.h  Device.h  Dim3.h  Invocation.h  Memory.h  Module.h  Object.h  PipelineExecutor.h  Type.h
lib/talvos/: Buffer.cpp  CMakeLists.txt  Instruction.cpp  Invocation.cpp  Memory.cpp  Module.cpp  PipelineExecutor.cpp  PipelineStage.cpp  Type.cpp
test/: CMakeLists.txt  run-test.py
test/interactive/: CMakeLists.txt  with_stdin.cmake
test/misc/: descriptor-array-runtime-array.spvasm  ssbo-direct-load-store.spvasm
test/plugins/: CMakeLists.txt  callbacks.tcf
test/runtime/: CMakeLists.txt
test/spirv/: phi-swap.spvasm  spec-constant-workgroupsize.spvasm  spec-constants.spvasm
tools/talvos-cmd/: CMakeLists.txt  CommandFile.cpp  CommandFile.h  wasm.cpp
